--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "homepage": "https://conradmr94.github.io",
   "private": true,
   "dependencies": {
+    "@fontsource/ibm-plex-mono": "^5.2.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^12.23.6",
     "gh-pages": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
